# rust-monorepo

./: .gitignore  .gitmodules  .npmignore  Cargo.toml  LICENSE  README.md  build_and_run.ps1  build_and_run.sh  index.d.ts  index.js  package.json
.cargo/: config.toml
.github/workflows/: CI.yml  deepnest_svg_preprocessor.yml
__test__/: index.spec.mjs
crates/clipper2/: Cargo.toml
crates/clipper2/src/: core.rs  lib.rs
crates/deepnest-lib/: Cargo.toml
crates/deepnest-lib/src/: lib.rs
crates/deepnest-lib/src/excel/: mod.rs
crates/deepnest-lib/src/nfp/: mod.rs
crates/deepnest-types/: Cargo.toml
crates/deepnest-types/src/: lib.rs  point.rs  polygon.rs  rect.rs  vector.rs
crates/deepnest-types/src/types/: mod.rs  point.rs  rect.rs
crates/deepnest_svg_preprocessor/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/deepnest_svg_preprocessor/examples/: benchmark.js
crates/deepnest_svg_preprocessor/npm/darwin-arm64/: package.json
crates/deepnest_svg_preprocessor/npm/darwin-x64/: package.json
crates/deepnest_svg_preprocessor/npm/freebsd-x64/: package.json
crates/deepnest_svg_preprocessor/npm/linux-arm-gnueabihf/: README.md  package.json
crates/deepnest_svg_preprocessor/npm/linux-arm-musleabihf/: package.json
crates/deepnest_svg_preprocessor/npm/linux-arm64-gnu/: README.md  package.json
crates/deepnest_svg_preprocessor/npm/linux-arm64-musl/: package.json
crates/deepnest_svg_preprocessor/npm/linux-riscv64-gnu/: package.json
crates/deepnest_svg_preprocessor/npm/linux-x64-gnu/: package.json
crates/deepnest_svg_preprocessor/npm/linux-x64-musl/: README.md  package.json
crates/deepnest_svg_preprocessor/npm/win32-arm64-msvc/: package.json
crates/deepnest_svg_preprocessor/npm/win32-ia32-msvc/: package.json
crates/deepnest_svg_preprocessor/npm/win32-x64-msvc/: README.md  package.json
crates/deepnest_svg_preprocessor/src/: convex_hull.rs  lib.rs  points_on_path.rs  simplify_polygon.rs
crates/deepnest_svg_preprocessor/src/path_data_parser/: normalize.rs
crates/deepnest_svg_preprocessor/src/points_on_curve/: curve.rs  curve_to_bezier.rs  mod.rs
crates/geometry-utils/: Cargo.toml  geometry.d.ts  geometry.js  index.js
crates/geometry-utils/npm/android-arm-eabi/: README.md
crates/geometry-utils/npm/android-arm64/: README.md  package.json
crates/geometry-utils/npm/darwin-arm64/: README.md
crates/geometry-utils/npm/darwin-x64/: README.md  package.json
crates/geometry-utils/npm/freebsd-x64/: README.md
crates/geometry-utils/npm/linux-arm-gnueabihf/: README.md  package.json
crates/geometry-utils/npm/linux-arm64-gnu/: README.md  package.json
crates/geometry-utils/npm/linux-x64-gnu/: package.json
crates/geometry-utils/npm/linux-x64-musl/: package.json
crates/geometry-utils/npm/win32-arm64-msvc/: README.md
crates/geometry-utils/npm/win32-x64-msvc/: package.json
crates/geometry-utils/src/: arc.rs  constants.rs  cubic_bezier.rs  geometryutils.rs  lib.rs  output_lib.rs  output_napi.rs  quadratic_bezier.rs
crates/libs/deepnest-lib/: Cargo.toml
crates/libs/deepnest-types/: Cargo.toml  build.rs
crates/libs/geometry-utils/: package.json  rustfmt.toml
crates/libs/lightburn-converter/: Cargo.toml  README.md
crates/libs/lightburn-converter/examples/: convert_to_lightburn.rs  convert_to_svg.rs
crates/libs/lightburn-converter/src/: lib.rs  lightburn.rs  lightburn.rs.fix  lightburn.rs.new  lightburn.rs.old  main.rs  svg.rs  svg.rs.fix  svg.rs.new  svg.rs.old  types.rs
crates/libs/lightburn-converter/src/parsers/: svg_parser.rs
crates/libs/lightburn-converter/tests/: test_lightburn_to_svg.rs  test_svg_to_lightburn.rs
crates/libs/lightburn-converter/tests/fixtures/: test_circle.lbrn  test_circle.lbrn2  test_circle_from_svg.lbrn  test_circle_from_svg.lbrn2  test_circle_lightburn3.lbrn  test_circle_lightburn3.lbrn2  test_complex_from_svg.lbrn  test_complex_paths.lbrn  test_complex_paths.lbrn2
crates/node-clipper2/: README.md  build.vsconfig  index.js  vs2022_setup.ps1
crates/node-clipper2/src/: lib.rs
crates/node-svg-preprocessor/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/node-svg-preprocessor/.github/workflows/: CI.yml
crates/node-svg-preprocessor/npm/darwin-arm64/: package.json
crates/node-svg-preprocessor/npm/darwin-x64/: package.json
crates/node-svg-preprocessor/npm/linux-arm-musleabihf/: README.md
crates/node-svg-preprocessor/npm/linux-arm64-musl/: README.md
crates/node-svg-preprocessor/npm/linux-x64-gnu/: README.md
crates/node-svg-preprocessor/npm/win32-arm64-msvc/: package.json
crates/node-svg-preprocessor/npm/win32-ia32-msvc/: README.md  package.json
crates/node-svg-preprocessor/npm/win32-x64-msvc/: package.json
crates/node-svg-preprocessor/src/: lib.rs
crates/npm/deepnest-nofitpolygon/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/npm/deepnest-nofitpolygon/__test__/: index.spec.js
crates/npm/deepnest-nofitpolygon/src/: lib.rs
crates/npm/node-clipper2/: Cargo.toml  package.json  vs2022_setup.ps1
crates/npm/node-clipper2/npm/linux-arm64-gnu/: package.json
crates/npm/node-clipper2/npm/linux-arm64-musl/: README.md
crates/npm/node-clipper2/npm/linux-riscv64-gnu/: README.md  package.json
crates/npm/node-clipper2/npm/linux-x64-musl/: README.md
crates/npm/node-clipper2/npm/win32-x64-msvc/: README.md  package.json
crates/npm/node-clipper2/src/: lib.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: package.json
src/: lib.rs
(+74 files in other folders)
