[workspace]
resolver = "2"
members = [
    "crates/libs/clipper2",
    "crates/libs/deepnest-lib",
    "crates/libs/deepnest-types",
    "crates/libs/geometry-utils",
    "crates/npm/node-clipper2",
    "crates/npm/deepnest_svg_preprocessor",
    "crates/bin/deepnest-server",
    "./crates/plugins/deepnest-plugin-svg", "crates/plugins/deepnest-plugin-svg",
]

[workspace.package]
authors = ["Josef Fröhle <github@josef-froehle.de>"]
edition = "2021"
license = "AGPL-3.0-only"
version = "0.100.0"

[workspace.dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16", features = [
    "compat-mode",
    "napi1",
    "napi2",
    "napi3",
    "napi4",
    "napi5",
    "napi6",
    "napi7",
    "napi8",
    "napi9",
    "full",
    "serde-json",
    "serde-json-ordered",
    "serde-json",
    "experimental",
    "latin1",
    "chrono_date",
    "object_indexmap",
    "tokio",
    "async",
    "tokio_rt",
    "tokio_fs",
    "tokio_macros",
    "deferred_trace",
] }
napi-derive = { version = "2.16", default-features = true}
usvg = "0.45"
napi-build = "2.1"
cfg-if = "1"
delegate = "0.13" 
derive_more = { version = "2", features = ["full"] }
regex = "1.11"
parry2d-f64 = "0.20"
simplifyRS = { version = "0.5", features = ["serde"], package = "simplify-polyline" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }


[profile.release]
lto = true
strip = "symbols"
