[package]
name = "deepnest-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
deepnest-types = { path = "../deepnest-types" }
babushka = { path = "../babushka" }

[features]
default = []
node = ["deepnest-types/node"]
traits = ["deepnest-types/traits"]