[package]
name = "deepnest-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
deepnest-types = { path = "../deepnest-types" }
babushka = { path = "../babushka" }
ooxml = "0.2.8"
csv = "1.3.1"
regex.workspace = true
calamine = "0.26.1"

[features]
default = []
node = ["deepnest-types/node"]
traits = ["deepnest-types/traits"]
