[package]
name = "deepnest-types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
delegate.workspace = true
derive_more.workspace = true

[build-dependencies]
napi-build = { workspace = true, optional = true }

[features]
default = []
node = ["napi", "napi-build", "napi-derive"]
