[package]
name = "geometry-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
derive_more.workspace = true
deepnest-types = { path = "../deepnest-types" }

[build-dependencies]
napi-build = { workspace = true, optional = true }

[features]
default = ["node"]
node = ["deepnest-types/node", "napi", "napi-build", "napi-derive" ]
