[package]
name = "geometry-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
derive_more.workspace = true
deepnest-types = { path = "../deepnest-types" }

[build-dependencies]
napi-build = { workspace = true, optional = true }

[features]
default = ["node"]
node = ["deepnest-types/node", "napi", "napi-build", "napi-derive" ]
