[package]
name = "deepnest_clipper2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
clipper2-sys = { git = "https://github.com/songhuaixu/clipper2-sys", branch = "master" }
#geo = "0.29.3"

[build-dependencies]
napi-build.workspace = true
